[package]
name = "rs-proxy"
version = "0.4.0"
authors = ["Jire"]
description = "a simple, cross-platform, multi-client TCP proxy for Old-school RS2/JS5"
homepage = "https://github.com/Jire/rs-proxy"
repository = "https://github.com/Jire/rs-proxy"
readme = "README.md"
keywords = ["proxy", "rsps", "rs2", "js5", "tokio"]
categories = ["command-line-utilities", "network-programming"]
license = "MIT"
edition = "2021"

[dependencies]
futures = "0.3.30"
getopts = "0.2.21"
proxy-header = "0.1.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-uring = "0.4.0"
