[package]
name = "rs-proxy"
version = "0.7.0"
authors = ["Jire"]
description = "a simple, cross-platform, multi-client TCP proxy for Old-school RS2/JS5"
homepage = "https://github.com/Jire/rs-proxy"
repository = "https://github.com/Jire/rs-proxy"
readme = "README.md"
keywords = ["proxy", "rsps", "rs2", "js5", "tokio"]
categories = ["command-line-utilities", "network-programming"]
license = "MIT"
edition = "2021"

[dependencies]
bytes = "1.6.0"
getopts = "0.2.21"
proxy-header = "0.1.0"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tokio-uring = { version = "0.4.0", features = ["bytes"] }

[profile.release]
opt-level = 3
debug = true
strip = "none"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
