[package]
name = "rs-proxy"
version = "0.11.0"
authors = ["Jire"]
description = "a simple, cross-platform, multi-client TCP proxy for Old-school RS2/JS5"
homepage = "https://github.com/Jire/rs-proxy"
repository = "https://github.com/Jire/rs-proxy"
readme = "README.md"
keywords = ["proxy", "rsps", "rs2", "js5", "tokio"]
categories = ["command-line-utilities", "network-programming"]
license = "MIT"
edition = "2021"

[dependencies]
bytes = "1.8.0"
getopts = "0.2.21"
proxy-header = "0.1.2"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-uring = { version = "0.4.0", features = ["bytes"] }

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false